--- a/.gitattributes
+++ b/.gitattributes
@@ -2,4 +2,5 @@
 *.js linguist-detectable=false
 *.html linguist-detectable=false
 *.xml linguist-detectable=false
+*.css linguist-detectable=false
 
